# Cadence

./: .gitignore  Cargo.toml  README.md  ROADMAP-EDITOR.md  ROADMAP.md  demo.cadence  issues.md  pattern.md  plan.md  reve.cadence
.github/workflows/: ci.yml  pages.yml
cadence-core/: Cargo.toml  README.md
cadence-core/src/: lib.rs  wasm.rs
cadence-core/src/parser/: ast.rs  binder.rs  builtins.rs  environment.rs  error.rs  evaluator.rs  evaluator_tests.rs  interpreter.rs  lexer.rs  mod.rs  module_resolver.rs  statement_parser.rs  symbols.rs  validator.rs
cadence-core/src/types/: audio_config.rs  chord.rs  drum.rs  mod.rs  note.rs  pattern.rs  roman_numeral.rs  scheduled_event.rs  time.rs  voice_leading.rs
cadence-core/src/types/pattern/: core.rs  euclidean.rs  event.rs  every.rs  mod.rs  parser.rs  step.rs  tests.rs
cadence-core/tests/: repro_issue.rs
docs/: handoff-queue-cycle.md  handoff.md  syntax.md
editor/: README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
editor/src/: adsr-editor.ts  audio-engine.ts  cadence-wasm.ts  cadence-worker.ts  file-tree.ts  filesystem-service.ts  gotoDefinition.ts  hover.ts  icons.ts  interpreter-client.ts  lang-cadence-wasm.ts  lang-cadence.ts  main.ts  midi-output.ts  piano-roll.ts  properties-panel.ts  style.css  tab-bar.ts  theme.ts
editor/src/components/: ResizeHandle.ts  StatusBar.ts  Toolbar.ts  index.ts
examples/: aventure.cadence  friend.cadence  reve.cadence
examples/compositions/: a_mini.cadence  current_construction.cadence  drums.cadence  experiment.cadence  free.cadence  module_test.cadence  together.cadence  voyage.cadence
ref_doc/: handoff-symbol-table.md  handoff-wasm-async-architecture.md  handoff-wasm-module-resolution.md  handoff-weighted-steps.md
src/: lib.rs  main.rs  repl.rs
src/audio/: adsr.rs  audio.rs  clock.rs  drum_synth.rs  event_dispatcher.rs  midi.rs  mod.rs  oscillator.rs  playback_engine.rs  quota_exceeded.txt  scheduler.rs
src/audio/_deprecated/: README.md  playback_engine.rs  scheduler.rs
src/commands/: audio.rs  general.rs  midi.rs  mod.rs
src/parser/: ast.rs  environment.rs  evaluator.rs  evaluator_tests.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  statement_parser.rs
src/repl/: mod.rs  watcher.rs
src/types/: audio_config.rs  chord.rs  mod.rs  note.rs  pattern.rs  progression.rs  roman_numeral.rs  voice_leading.rs
zcompose/: _current.cadence  a_circular.cadence  a_mini.cadence  a_minion.cadence  attempt.cadence  avec_toi.cadence  b_circular.cadence  dynamic_patterns_guide.cadence  free.cadence  functional.cadence
