[package]
name = "cadence-core"
version = "0.1.0"
edition = "2021"
description = "Core types and parser for the Cadence music programming language (WASM-compatible)"
license = "MIT"

[dependencies]
anyhow = "1.0"
num-rational = "0.4"
num-traits = "0.2"

[features]
default = ["colored"]
serde = ["dep:serde"]
colored = ["dep:colored"]
wasm = ["dep:wasm-bindgen", "serde", "dep:serde-wasm-bindgen"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.colored]
version = "3.0"
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6"
optional = true

[lib]
crate-type = ["cdylib", "rlib"]
