[package]
name = "cadence-core"
version = "0.1.0"
edition = "2021"
description = "Core types and parser for the Cadence music programming language (WASM-compatible)"
license = "MIT"

[dependencies]
anyhow = "1.0"

[dependencies.num-rational]
version = "0.4"
features = []

[features]
default = ["colored"]
serde = ["dep:serde", "num-rational/serde"]
colored = ["dep:colored"]
wasm = ["dep:wasm-bindgen", "serde", "dep:serde-wasm-bindgen", "dep:js-sys", "dep:serde_json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.colored]
version = "3.0"
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[lib]
crate-type = ["cdylib", "rlib"]
